--- a/style.css
+++ b/style.css
@@ -324,6 +324,9 @@ header nav a:hover{
     border-radius: 50%;
     margin-right: 5px;
   }
+  .social .icons i:hover{
+    box-shadow: 0 0 0 2px #ffffff9f;
+  }
   hr{
     width: 80%;
     margin: 0 auto;
