--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ header nav a:hover{
    background-color: #289256;
    display: inline-block;
    border-radius: 50%;
-   box-shadow: 0 0 50px #289256, 0 0 25px#30B868;
+   box-shadow: 0 0 50px #289256, 0 0 50px #216d41;
 }
 .hero-container .hero-p{
     color: #FFFFFF;
@@ -192,7 +192,8 @@ header nav a:hover{
     justify-content: flex-start;
     align-items: center;
     border-radius: 8px;
-    background-color: rgb(247, 247, 247);
+    background-color: #FFFFFF;
+    box-shadow: 0 0 1px#627382;
     padding: 40px 20px;
     height: auto;
     width: 100%;
